--- a/src/components/hero.pug
+++ b/src/components/hero.pug
@@ -5,7 +5,7 @@ section.hero
         //- +img
       .hero__data
         table
-          - var data = [['Проживаю','Липецк'], ['Возраст','25 лет'], ['Родился','27 марта 1994']];
+          - var data = [['Проживаю:','Липецк'], ['Возраст:','25 лет'], ['Родился:','27 марта 1994']];
           each row in data
             tr
               td #{row[0]}
@@ -17,5 +17,5 @@ section.hero
         .hero__welcome Привет, меня зовут
         .hero__name Александр Серебряков
         .hero__text.text 
-          p Чем я могу быть вам полезен
-          P Этот сайт я сделал в рамках обучения в школе онлайн образования LoftSchool. Чуть похже я освежу в нем свой контент. А пока посмотрите, как тут все классно и красиво!
+          p.me Я занимаюсь разработкой современных сайтов и приложений.<br>Мне нравиться делать интересные и современные проекты.
+          P Этот сайт я сделал в рамках обучения в школе онлайн образования<br> LoftSchool. Чуть похже я освежу в нем свой контент. А пока<br> посмотрите, как тут все классно и красиво!
