--- a/src/components/welcome-section.pug
+++ b/src/components/welcome-section.pug
@@ -1,5 +1,6 @@
 .welcome-section
-  h1.welcome-section__name-title Александр Серебряков
-  H2.Welcome-section__title Личный сайт веб разработчика
+  .welcome-section__text
+    h1.welcome-section__name-title Александр<br> Серебряков
+    H2.Welcome-section__title Личный сайт<br> веб разработчика
   a.welcome-section__scroll Скролл
   //- +icon
