--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -1,7 +1,65 @@
 .footer {
-
+  height: 371px;
+  background: url(/src/images/content/footer-bg.jpg) center center / cover no-repeat;
+  display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
-.footer__item {
-  
+
+.footer__wrap {
+  display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
+
+.footer__year {
+  font-size: 48px;
+  padding-right: 60px;
+  padding-bottom: 75px;
+}
+
+.footer__name {
+  color: #fff;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.footer__description {
+  color: #606365;
+  line-height: 30px;
+}
+
+.foote__content {
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	align-content: center;
+}
+
+.footer__content-block {
+  display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+
+.footer__text.text {
+  color: #606365;
+  padding-left: 56px;
+  padding-bottom: 30px;
+}
+
+.footer__blockquote-text.text {
+  color: #606365;
+  padding-bottom: 35px;
+}
+
+.footer__author {
+  color: #fff;
+}
+
+
+
