--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -1,19 +1,20 @@
 footer.footer
   .footer__wrap
     .footer__year 2019
-    .footer__name Александр Серебряков
-      .footer__description Личный сайт веб разработчика
+    .footer__name АЛЕКСАНДР <br> СЕРЕБРЯКОВ
+      .footer__description Личный сайт <br>  веб разработчика
   .footer__content
     include main-menu
-    .footer__block
-      p.footer__text.text Этот сайт я сделал в рамках обучения в школе онлайн образования LoftSchool. Чуть похже я освежу в нем свой контент. А пока посмотрите, как тут все классно и красиво!
-      .footer__socials
-        include socials
-        +socials('footer')
-    .footer__block
-      blockquote.footer__blockquote
-        p.footer__blockquote-text.text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
-        cite.footer__author Martin Golding
+    .footer__content-block
+      .footer__block
+        p.footer__text.text Этот сайт я сделал в рамках обучения в <br> школе онлайн образования LoftSchool! 
+        .footer__socials
+          include socials
+          +socials('footer')
+      .footer__block
+        blockquote.footer__blockquote
+          p.footer__blockquote-text.text Всегда пишите код так, будто сопровождать его будет <br> склонный к насилию психопат, который знает где вы <br> живете
+          cite.footer__author Martin Golding
 
 
 
